--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Bill Liu</h1>
-						<p>"Everyone you meet will know something you don't. <i>-Bill Nye"<i/><br />
-						"Everyone you meet is an opportunity to teach. <i>-Bill Liu"<i/></p>
+						<p>"Everyone you meet will know something you don't." <i>-Bill Nye<i/><br />
+						"Everytime you meet someone is an opportunity to teach." <i>-Bill Liu<i/></p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
