--- a/index.html
+++ b/index.html
@@ -54,15 +54,19 @@
 							<article class="post featured">
 								<header class="major">
 									<span class="date">A Little About Me</span>
-									<h2><a href="#">Massive<br />
-									Headline</a></h2>
-									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									amet nullam sed etiam veroeros.</p>
+									<h2><a href="#"><br />
+									</a></h2>
+									<a href="#" class="image main"><img src="ProfileShot.jpg" alt="" /></a>
+									<p>Hung 4 feet off the ground across the bed in my room is a whiteboard <br />
+										with the words “How will you drive humanity forward today?” As cheesy <br />
+										as it sounds, it has helped keep my life focused and on track. The first <br />
+										thing I see when I wake and the last thing I see before I sleep, it is <br />
+										my Ikigai, a Japanese term for a fulfilling reason for being. It has <br />
+										driven all that I have done for the past years of my life, and continues <br />
+										to motivate me today. </p>
 								</header>
-								<a href="#" class="image main"><img src="ProfileShot.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">Full Story</a></li>
+									<li><a href="#" class="button large">To Student Trustee Website</a></li>
 								</ul>
 							</article>
 
