--- a/index.html
+++ b/index.html
@@ -54,9 +54,8 @@
 							<article class="post featured">
 								<header class="major">
 									<span class="date">A Little About Me</span>
-									<h2><a href="#"><br />
-									</a></h2>
-									<a href="#" class="image main"><img src="ProfileShot.jpg" alt="" /></a>
+									<!--<h2><a href="#"><br />
+									</a></h2> -->
 									<p>Hung 4 feet off the ground across the bed in my room is a whiteboard <br />
 										with the words “How will you drive humanity forward today?” As cheesy <br />
 										as it sounds, it has helped keep my life focused and on track. The first <br />
@@ -65,6 +64,7 @@
 										driven all that I have done for the past years of my life, and continues <br />
 										to motivate me today. </p>
 								</header>
+								<a href="#" class="image main"><img src="ProfileShot.jpg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="#" class="button large">To Student Trustee Website</a></li>
 								</ul>
