--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 										driven all that I have done for the past years of my life, and continues <br />
 										to motivate me today. </p>
 								</header>
-								<a href="#" class="image main"><img src="ProfileShot.jpg" alt="" /></a>
+								<a href="#" class="image main"><img src="images/ProfileShot.jpg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="#" class="button large">To Student Trustee Website</a></li>
 								</ul>
