--- a/index.html
+++ b/index.html
@@ -70,7 +70,10 @@
 								</ul>
 							</article>
 
-						<!-- Posts -->
+
+							<!--
+
+						<!- Posts ->
 							<section class="posts">
 								<article>
 									<header>
@@ -146,6 +149,10 @@
 								</article>
 							</section>
 
+
+						-->
+
+
 						<!-- Footer -->
 							<footer>
 								<div class="pagination">
@@ -188,25 +195,25 @@
 						</section>
 						<section class="split contact">
 							<section class="alt">
-								<h3>Address</h3>
-								<p>1234 Somewhere Road #87257<br />
-								Nashville, TN 00000-0000</p>
+								<h3>Office Address</h3>
+								<p>201 Yorkland Street,<br />
+								Richmond Hill, ON</p>
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p><a href="#">(000) 000-0000</a></p>
+								<p><a href="#">(647) 808-3188</a></p>
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">info@untitled.tld</a></p>
+								<p><a href="#">billliusiyi@gmail.com / bill.liu@yrdsb.ca / bill@cursor.club</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://twitter.com/bill_lliu" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="https://www.facebook.com/penguinofwinter" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+									<li><a href="https://www.instagram.com/bill.lliu/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="https://github.com/penguinofwinter/" class="icon fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
 						</section>
@@ -214,7 +221,8 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li>&copy; Untitled</li><li>Design:@ajlkn <a href="https://html5up.net">HTML5 UP</a></li>
+							<li>Used under the Creative Commons license.</li></ul>
 					</div>
 
 			</div>
