--- a/index.html
+++ b/index.html
@@ -149,14 +149,10 @@
 								</article>
 							</section>
 
-
-						-->
-
-
-						<!-- Footer -->
+						<!- Footer ->
 							<footer>
 								<div class="pagination">
-									<!--<a href="#" class="previous">Prev</a>-->
+									<a href="#" class="previous">Prev</a>
 									<a href="#" class="page active">1</a>
 									<a href="#" class="page">2</a>
 									<a href="#" class="page">3</a>
@@ -167,6 +163,12 @@
 									<a href="#" class="next">Next</a>
 								</div>
 							</footer>
+
+
+
+						-->
+
+
 
 					</div>
 
@@ -196,8 +198,7 @@
 						<section class="split contact">
 							<section class="alt">
 								<h3>Office Address</h3>
-								<p>201 Yorkland Street,<br />
-								Richmond Hill, ON</p>
+								<p>201 Yorkland Street, Richmond Hill, ON</p>
 							</section>
 							<section>
 								<h3>Phone</h3>
@@ -205,7 +206,9 @@
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">billliusiyi@gmail.com / bill.liu@yrdsb.ca / bill@cursor.club</a></p>
+								<p><a href="#">billliusiyi@gmail.com<br />
+									bill.liu@yrdsb.ca<br />
+									bill@cursor.club</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
