--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design:@ajlkn <a href="https://html5up.net">HTML5 UP</a></li>
-							<li>Used under the Creative Commons license.</li></ul>
+						<ul><li>&copy; Bill Liu 2019</li><li>Design:@ajlkn  <a href="https://html5up.net">HTML5 UP</a></li>
+							<li>Permitted use under the Creative Commons license</li></ul>
 					</div>
 
 			</div>
