--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Bill Liu 2019</li><li>Design:@ajlkn  <a href="https://html5up.net">HTML5 UP</a></li>
+						<ul><li>&copy; Bill Liu 2019</li><li>Original Design:@ajlkn from <!--<a href="https://html5up.net"> -->HTML5 UP</a></li>
 							<li>Permitted use under the Creative Commons license</li></ul>
 					</div>
 
