--- a/index.html
+++ b/index.html
@@ -226,8 +226,8 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Bill Liu 2019</li><li>Original Design:@ajlkn from <!--<a href="https://html5up.net"> -->HTML5 UP</a></li>
-							<li>Permitted use under the Creative Commons license</li></ul>
+						<ul><li>&copy; Bill Liu 2019</li><li>Original Design:@ajlkn from HTML5 UP</a></li>
+							<li>Permitted use under the Creative Commons license</li><!--<li>images sourced from <a href="https://unsplash.com/">Unsplash</li></ul>
 					</div>
 
 			</div>
