--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 								</header>
 								<a href="#" class="image main"><img src="images/ProfileShot.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">To Student Trustee Website</a></li>
+									<li><a href="http://www.yrdsb.ca/studenttrustees/Pages/default.aspx" class="button large">To Student Trustee Website</a></li>
 								</ul>
 							</article>
 
