--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-	Massively by HTML5 UP
+	Original Design: Massively by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
@@ -226,8 +226,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Bill Liu 2019</li><li>Original Design:@ajlkn from HTML5 UP</a></li>
-							<li>Permitted use under the Creative Commons license</li><!--<li>images sourced from <a href="https://unsplash.com/">Unsplash</li></ul>
+						<ul><li>&copy; Bill Liu 2019</li><li>Design Inspired by:@ajlkn from HTML5 UP</a></li><li>All images photographed by Bill Liu</li></ul>
 					</div>
 
 			</div>
