--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 						-->
 						</ul>
 						<ul class="icons">
-							<li><a href="https://twitter.com/bill_lliu" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="https://www.facebook.com/penguinofwinter" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="https://twitter.com/bill_lliu/" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://www.facebook.com/penguinofwinter/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="https://www.instagram.com/bill.lliu/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="https://github.com/penguinofwinter/" class="icon fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
