--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">A Little About Me</span>
+									<span class="date">A Little Bit About Me</span>
 									<!--<h2><a href="#"><br />
 									</a></h2> -->
 									<p>Hung 4 feet off the ground across the bed in my room is a whiteboard <br />
